--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Hanna and Robin going to Salone
-email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Travel stories from Sierra Leone by Hanna and Robin
 baseurl: "/salone" # the subpath of your site, e.g. /blog
 url: "https://murrx.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
