--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Hanna and Robin going to Salone
 description: >- # this means to ignore newlines until "baseurl:"
-  Travel stories from Sierra Leone by Hanna and Robin
+  Experiences from Sierra Leone by Hanna and Robin
 baseurl: "/salone" # the subpath of your site, e.g. /blog
 url: "https://murrx.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
